2001-10-22  Eli Zaretskii  <eliz@is.elta.co.il>

	* textmodes/sgml-mode.el (sgml-mode-map): Bind 8-bit codes above
	127 to sgml-maybe-name-self.
	(sgml-name-8bit-mode): Doc fix.
	(sgml-char-names-table): New variable.
	(sgml-name-char): Support non-ASCII and mule-unicode-*
	characters.  Doc fix.
	(sgml-maybe-name-self): Convert unibyte characters to multibyte.

	* tooltip.el (tooltip-x-offset, tooltip-y-offset): Mention in the
	doc string the effect of `left' and `top' parameters in
	tooltip-frame-parameters, the default values, and the units.
	(tooltip-frame-parameters): Mention `top' and `left' in the doc
	string.
	(tooltip-show): Mention in the doc string the `top' and `left'
	parameters in tooltip-frame-parameters, and x-max-tooltip-size.
	(tooltip-set-param): Doc fix.

2001-10-22  Gerd Moellmann  <gerd@gnu.org>

	* saveplace.el (save-place): Require `saveplace'.

	* progmodes/cwarn.el (cwarn-font-lock-feature-keywords-alist): 
	Use `sexp' for :value-type instead of `face'.

2001-10-20  Gerd Moellmann  <gerd@gnu.org>

	* Version 21.1 released.

2001-10-19  Eli Zaretskii  <eliz@is.elta.co.il>

	* files.el (auto-mode-alist): Associate .indent.pro with
	Fundamental mode.  Suggested by Samuel Padgett
	<spadgett1@nc.rr.com>.

2001-10-18  Eli Zaretskii  <eliz@is.elta.co.il>

	* scroll-bar.el (scroll-bar-toolkit-scroll): Don't ring the bell
	when we hit the beginning or the end of the buffer.  Instead, just
	print a message and do nothing.

2001-10-18  Stefan Monnier  <monnier@cs.yale.edu>

	* xml.el (xml-parse-tag): Use eq on char-after's return value.

2001-10-18  Gerd Moellmann  <gerd@gnu.org>

	* isearch.el (isearch-mode-map): Bind `mouse-movement' to nil.

	* obsolete/hilit19.el (hilit-lookup-face-create):
	Call set-face-font only if display-graphic-p.
	(toplevel): Remove references to window-system.

2001-10-18  Miles Bader  <miles@gnu.org>

	* simple.el (what-line): Avoid problems with field properties.

2001-10-17  Eli Zaretskii  <eliz@is.elta.co.il>
